--- a/shawonmollah.ipynb
+++ b/shawonmollah.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOikF1BV2eEeUIVEX/FSM2E",
+      "authorship_tag": "ABX9TyNXfIkAgOFZNcAMhBYODWcz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,62 +29,56 @@
     {
       "cell_type": "code",
       "source": [
-        "my_str = \"google colab is cool!\"\n",
-        "my_str.title()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "s4DltyMU-8Uc",
-        "outputId": "ec6d6ac0-6d96-425d-d680-001d6b3f7335"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'Google Colab Is Cool!'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/ShawonTech/CSE-316"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "df = pd.read_csv(\"/content/drive//My Drive/Titanic-Dataset.csv\")\n",
+        "print(df.head())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "5S1mrJopBBVk",
-        "outputId": "46ee1300-14f1-47e8-9b30-15b11d5ef0b6"
+        "id": "wrsHAsH04FKg",
+        "outputId": "1acda168-72f4-4e48-f7dc-9949e9325d7c"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into 'CSE-316'...\n",
-            "remote: Enumerating objects: 75, done.\u001b[K\n",
-            "remote: Counting objects: 100% (75/75), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (67/67), done.\u001b[K\n",
-            "remote: Total 75 (delta 20), reused 0 (delta 0), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (75/75), 23.64 KiB | 1.48 MiB/s, done.\n",
-            "Resolving deltas: 100% (20/20), done.\n"
+            "   PassengerId  Survived  Pclass  \\\n",
+            "0            1         0       3   \n",
+            "1            2         1       1   \n",
+            "2            3         1       3   \n",
+            "3            4         1       1   \n",
+            "4            5         0       3   \n",
+            "\n",
+            "                                                Name     Sex   Age  SibSp  \\\n",
+            "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+            "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+            "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+            "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+            "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+            "\n",
+            "   Parch            Ticket     Fare Cabin Embarked  \n",
+            "0      0         A/5 21171   7.2500   NaN        S  \n",
+            "1      0          PC 17599  71.2833   C85        C  \n",
+            "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+            "3      0            113803  53.1000  C123        S  \n",
+            "4      0            373450   8.0500   NaN        S  \n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "8rPX97SD5Shp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
