--- a/shawonmollah.ipynb
+++ b/shawonmollah.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXfIkAgOFZNcAMhBYODWcz",
+      "mount_file_id": "https://github.com/ShawonTech/CSE-316/blob/main/shawonmollah.ipynb",
+      "authorship_tag": "ABX9TyPoQnVe++yG71xfWndy55DU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,12 +74,218 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "updated_df = df\n",
+        " updated_df[’Age’]=updated_df[’Age’].fillna(updated_df[’Age’].mean())\n",
+        " updated_df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "8rPX97SD5Shp",
+        "outputId": "c50167c1-ab34-47c8-c029-b05336550d87"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "unexpected indent (ipython-input-16-4006071904.py, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-16-4006071904.py\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    updated_df[’Age’]=updated_df[’Age’].fillna(updated_df[’Age’].mean())\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "19a9dd67",
+        "outputId": "81add49e-7f9c-4a8a-92ff-ec9dfb6e6842"
+      },
+      "source": [
+        "updated_df = df.copy()\n",
+        "updated_df['Age'] = updated_df['Age'].fillna(updated_df['Age'].mean())\n",
+        "updated_df.info()"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 891 entries, 0 to 890\n",
+            "Data columns (total 12 columns):\n",
+            " #   Column       Non-Null Count  Dtype  \n",
+            "---  ------       --------------  -----  \n",
+            " 0   PassengerId  891 non-null    int64  \n",
+            " 1   Survived     891 non-null    int64  \n",
+            " 2   Pclass       891 non-null    int64  \n",
+            " 3   Name         891 non-null    object \n",
+            " 4   Sex          891 non-null    object \n",
+            " 5   Age          891 non-null    float64\n",
+            " 6   SibSp        891 non-null    int64  \n",
+            " 7   Parch        891 non-null    int64  \n",
+            " 8   Ticket       891 non-null    object \n",
+            " 9   Fare         891 non-null    float64\n",
+            " 10  Cabin        204 non-null    object \n",
+            " 11  Embarked     889 non-null    object \n",
+            "dtypes: float64(2), int64(5), object(5)\n",
+            "memory usage: 83.7+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "updated_df = df.dropna(axis=1)\n",
+        "updated_df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wop8bUxg7VAC",
+        "outputId": "c03c63c0-0770-4943-ccbd-ea95463ef3ab"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 891 entries, 0 to 890\n",
+            "Data columns (total 9 columns):\n",
+            " #   Column       Non-Null Count  Dtype  \n",
+            "---  ------       --------------  -----  \n",
+            " 0   PassengerId  891 non-null    int64  \n",
+            " 1   Survived     891 non-null    int64  \n",
+            " 2   Pclass       891 non-null    int64  \n",
+            " 3   Name         891 non-null    object \n",
+            " 4   Sex          891 non-null    object \n",
+            " 5   SibSp        891 non-null    int64  \n",
+            " 6   Parch        891 non-null    int64  \n",
+            " 7   Ticket       891 non-null    object \n",
+            " 8   Fare         891 non-null    float64\n",
+            "dtypes: float64(1), int64(5), object(3)\n",
+            "memory usage: 62.8+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "updated_df = updated_df.dropna(axis=0)\n",
+        "\n",
+        "y1 = updated_df['Survived']\n",
+        "updated_df.drop(\"Survived\",axis=1,inplace=True)\n",
+        "updated_df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "REzGh3MU7me_",
+        "outputId": "c5883633-47b6-48c4-fca2-6302a1142ace"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 891 entries, 0 to 890\n",
+            "Data columns (total 8 columns):\n",
+            " #   Column       Non-Null Count  Dtype  \n",
+            "---  ------       --------------  -----  \n",
+            " 0   PassengerId  891 non-null    int64  \n",
+            " 1   Pclass       891 non-null    int64  \n",
+            " 2   Name         891 non-null    object \n",
+            " 3   Sex          891 non-null    object \n",
+            " 4   SibSp        891 non-null    int64  \n",
+            " 5   Parch        891 non-null    int64  \n",
+            " 6   Ticket       891 non-null    object \n",
+            " 7   Fare         891 non-null    float64\n",
+            "dtypes: float64(1), int64(4), object(3)\n",
+            "memory usage: 55.8+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "8rPX97SD5Shp"
+        "id": "1hpyczv87uvp"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a7e1fb84",
+        "outputId": "7dd0c7cd-b978-4bc4-fce4-45d0a447e5d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "df = pd.DataFrame({'Age': [42, 15, 67, 55, 1, 29, 75, 89, 4,\n",
+        "                           10, 15, 38, 22, 77]})\n",
+        "\n",
+        "df['Label'] = pd.cut(x=df['Age'], bins=[0, 3, 17, 63, 99],\n",
+        "                     labels=['Baby/Toddler', 'Child', 'Adult',\n",
+        "                             'Elderly'])\n",
+        "\n",
+        "print(df)\n",
+        "print(\"Categories: \")\n",
+        "print(df['Label'].value_counts())"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "    Age         Label\n",
+            "0    42         Adult\n",
+            "1    15         Child\n",
+            "2    67       Elderly\n",
+            "3    55         Adult\n",
+            "4     1  Baby/Toddler\n",
+            "5    29         Adult\n",
+            "6    75       Elderly\n",
+            "7    89       Elderly\n",
+            "8     4         Child\n",
+            "9    10         Child\n",
+            "10   15         Child\n",
+            "11   38         Adult\n",
+            "12   22         Adult\n",
+            "13   77       Elderly\n",
+            "Categories: \n",
+            "Label\n",
+            "Adult           5\n",
+            "Child           4\n",
+            "Elderly         4\n",
+            "Baby/Toddler    1\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
     }
   ]
 }
